Pn-21239  Enhance resume post payment validation to include recipient timeline categories